--- a/core/templates/core/navbar.html
+++ b/core/templates/core/navbar.html
@@ -7,7 +7,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="{% url 'home' %}">Home</a>
+        <a class="nav-link" href="{% url 'home' %}">Fuat Bank Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="{% url 'transactions:deposit' %}">Deposit</a>
